--- a/startbootstrap-grayscale-1.0.6/index.html
+++ b/startbootstrap-grayscale-1.0.6/index.html
@@ -68,6 +68,8 @@
 
     <!-- Intro Header -->
     <header class="intro">
+        <div class="intro-overlay">
+        </div>
         <div class="intro-body">
             <div class="container">
                 <div class="row">
