I like the top bit.

--- a/startbootstrap-grayscale-1.0.6/index.html
+++ b/startbootstrap-grayscale-1.0.6/index.html
@@ -9,13 +9,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>hypergolix - effortless encryption for IoT developers</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/grayscale.css" rel="stylesheet">
+    <link href="css/standardize.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -75,10 +75,21 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">hypergolix</h1>
-                        <p class="intro-text">Effortless security<br>for connected devices.</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
+                        <p class="intro-text">Effortless encryption<br>for IoT developers.</p>
+                        <!-- Begin mailchimp form -->
+                        <div class="row" id="mailchimpery">
+                            <form id="mc-form" action="//hypergolix.us11.list-manage.com/subscribe/post?u=657c50148ecaf8c628e366ecc&amp;id=b9df82ad9a" method="post">
+                                <input class="btn" type="email" id="mce-EMAIL" name="EMAIL" placeholder="email@example.com">
+                                <button class="btn" id="mc-embedded-subscribe" type="submit">I'm interested</button>
+                                <div aria-hidden="true" style="height: 0; width: 0; margin: 0; padding: 0; font-size: 0; display: inline; overflow: hidden; position:absolute; left: -9999px;">
+                                    <input aria-hidden="true" style="height: 0; width: 0; margin: 0; padding: 0; font-size: 0; display: inline; overflow: hidden; position:absolute; left: -9999px;" type="text" name="b_657c50148ecaf8c628e366ecc_b9df82ad9a" tabindex="-1" value="">
+                                </div>
+                            </form>
+                        </div>
+                        <!-- End mailchimp form -->
+                        <div class="row">
+                            <a href="#about" class="btn page-scroll learnmore">Learn more</a>
+                        </div>
                     </div>
                 </div>
             </div>
